overflow bug

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -4,7 +4,7 @@
 html, body, #home{
 	height: 100%;
 	overflow-x: hidden;
-	overflow-y: visible;
+	
 }
 
 
@@ -18,6 +18,7 @@ body{
 
 nav.navbar-transparente{
 	padding: 15px 0px;
+	margin-right: 17px; 
 	background: rgba(0,0,0,0.6)
 }
 
